# photo-rust

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.dev  HOW_TO_RUN.md  LICENSE  Makefile  QUICK_START.md  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  run.sh  run_rust.sh  test_api.sh
internal/transcode/: README.md
internal/transcode/src/: error.rs  main.rs  quality.rs  services.rs  transformations.rs  watermark.rs
src/: ai.rs  batch.rs  effects.rs  filters.rs  handlers.rs  image_processing.rs  logging.rs  main.rs  metadata.rs  models.rs  optimization.rs
src/handlers/: health.rs  mod.rs  video.rs
src/models/: mod.rs  video.rs
src/services/: mod.rs  video_processor.rs
src/utils/: error.rs
