[package]
name = "media-processing-service"
version = "0.1.0"
edition = "2021"
description = "Simple Rust project"

[dependencies]
# Core dependencies
actix-web = "4.11"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

# Video processing
ffmpeg-next = "6.1"
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
derive_more = "0.99" 